# .EXE

./: LICENSE  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
.idk/: dev.nix
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: local_ai_config.json
app/src/main/cpp/: CMakeLists.txt  llama_jni_bridge.cpp
app/src/main/kotlin/com/createexe/exe/: MainActivity.kt
app/src/main/kotlin/com/createexe/exe/animation/: AnimationBridge.kt
app/src/main/kotlin/com/createexe/exe/core/: NodeEngine.kt
app/src/main/kotlin/com/createexe/exe/llm/: LlamaEngine.kt  NullclawArbitrator.kt
app/src/main/kotlin/com/createexe/exe/service/: OverlayService.kt
app/src/main/kotlin/com/createexe/exe/settings/: SettingsRepository.kt
app/src/main/kotlin/com/createexe/exe/system/: SystemClockModule.kt
app/src/main/kotlin/com/createexe/exe/tts/: TtsEngine.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/: SystemBridge.kt
hemisphereb/: LogicAuditor.kt
nodes/: SoulNode.kt
ui/: OverlayView.kt
